// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugin examples > AWS target plugins > permission-boundary.js 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.17.0",
    },
    "outputs": {
      "root": {
        "undefined": {
          "cloud.TestRunner": {
            "TestFunctionArns": "WING_TEST_RUNNER_FUNCTION_ARNS",
          },
        },
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_ARNS": {
      "value": "[]",
    },
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRole",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
        "permissions_boundary": "some:fake:arn:SUPERADMIN",
      },
    },
    "aws_iam_role_policy": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicy",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":[\\"\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}\\",\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicyAttachment",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "undefined_cloudQueue_EventSourceMapping_6330B504": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/EventSourceMapping",
            "uniqueId": "undefined_cloudQueue_EventSourceMapping_6330B504",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}",
        "function_name": "\${aws_lambda_function.undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B.function_name}",
      },
    },
    "aws_lambda_function": {
      "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/Default",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_7c20b234": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
            "WING_FUNCTION_NAME": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "s3_key": "\${aws_s3_object.undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38.key}",
        "timeout": 30,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "undefined_Code_6226BB4A": {
        "//": {
          "metadata": {
            "path": "root/undefined/Code",
            "uniqueId": "undefined_Code_6226BB4A",
          },
        },
        "bucket_prefix": "code-c818e3de-",
      },
      "undefined_cloudBucket_7A0DE585": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Default",
            "uniqueId": "undefined_cloudBucket_7A0DE585",
          },
        },
        "bucket_prefix": "cloud-bucket-c8802ab1-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_public_access_block": {
      "undefined_cloudBucket_PublicAccessBlock_A3FBADF2": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "undefined_cloudBucket_PublicAccessBlock_A3FBADF2",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "undefined_cloudBucket_Encryption_80E33E4D": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Encryption",
            "uniqueId": "undefined_cloudBucket_Encryption_80E33E4D",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/S3Object",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "undefined_cloudQueue_98A56968": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/Default",
            "uniqueId": "undefined_cloudQueue_98A56968",
          },
        },
        "name": "cloud-Queue-c873ff25",
      },
    },
  },
}
`;

exports[`Plugin examples > AWS target plugins > replicate-s3.js 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.17.0",
    },
    "outputs": {
      "root": {
        "undefined": {
          "cloud.TestRunner": {
            "TestFunctionArns": "WING_TEST_RUNNER_FUNCTION_ARNS",
          },
        },
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_ARNS": {
      "value": "[]",
    },
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_policy": {
      "undefined_ReplicaCodePolicy_383E94DD": {
        "//": {
          "metadata": {
            "path": "root/undefined/ReplicaCodePolicy",
            "uniqueId": "undefined_ReplicaCodePolicy_383E94DD",
          },
        },
        "name": "some-prefix\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:GetReplicationConfiguration\\",\\"s3:ListBucket\\"],\\"Effect\\":\\"Allow\\",\\"Resource\\":[\\"\${aws_s3_bucket.undefined_Code_6226BB4A.arn}\\",\\"\${aws_s3_bucket.undefined_Code_6226BB4A.arn}/*\\"]},{\\"Action\\":[\\"s3:GetObjectVersionForReplication\\",\\"s3:GetObjectVersionAcl\\",\\"s3:GetObjectVersionTagging\\"],\\"Effect\\":\\"Allow\\",\\"Resource\\":\\"\${aws_s3_bucket.undefined_Code_6226BB4A.arn}/*\\"},{\\"Action\\":[\\"s3:ReplicateObject\\",\\"s3:ReplicateDelete\\",\\"s3:ReplicateTags\\"],\\"Effect\\":\\"Allow\\",\\"Resource\\":\\"\${aws_s3_bucket.undefined_ReplicaCode_A1324FE6.arn}/*\\"}]}",
      },
      "undefined_cloudBucket_ReplicaDefaultPolicy_546C44E0": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/ReplicaDefaultPolicy",
            "uniqueId": "undefined_cloudBucket_ReplicaDefaultPolicy_546C44E0",
          },
        },
        "name": "some-prefix\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"s3:GetReplicationConfiguration\\",\\"s3:ListBucket\\"],\\"Effect\\":\\"Allow\\",\\"Resource\\":[\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}\\",\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"]},{\\"Action\\":[\\"s3:GetObjectVersionForReplication\\",\\"s3:GetObjectVersionAcl\\",\\"s3:GetObjectVersionTagging\\"],\\"Effect\\":\\"Allow\\",\\"Resource\\":\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"},{\\"Action\\":[\\"s3:ReplicateObject\\",\\"s3:ReplicateDelete\\",\\"s3:ReplicateTags\\"],\\"Effect\\":\\"Allow\\",\\"Resource\\":\\"\${aws_s3_bucket.undefined_cloudBucket_ReplicaDefault_1A40E768.arn}/*\\"}]}",
      },
    },
    "aws_iam_policy_attachment": {
      "undefined_ReplicaCodePolicyAttachment_421AEC22": {
        "//": {
          "metadata": {
            "path": "root/undefined/ReplicaCodePolicyAttachment",
            "uniqueId": "undefined_ReplicaCodePolicyAttachment_421AEC22",
          },
        },
        "name": "some-prefixpolicy-attachment\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "policy_arn": "\${aws_iam_policy.undefined_ReplicaCodePolicy_383E94DD.arn}",
        "roles": [
          "\${aws_iam_role.undefined_ReplicaCodeRole_05811766.name}",
        ],
      },
      "undefined_cloudBucket_ReplicaDefaultPolicyAttachment_A42BB5ED": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/ReplicaDefaultPolicyAttachment",
            "uniqueId": "undefined_cloudBucket_ReplicaDefaultPolicyAttachment_A42BB5ED",
          },
        },
        "name": "some-prefixpolicy-attachment\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "policy_arn": "\${aws_iam_policy.undefined_cloudBucket_ReplicaDefaultPolicy_546C44E0.arn}",
        "roles": [
          "\${aws_iam_role.undefined_cloudBucket_ReplicaDefaultRole_D4A7BB23.name}",
        ],
      },
    },
    "aws_iam_role": {
      "undefined_ReplicaCodeRole_05811766": {
        "//": {
          "metadata": {
            "path": "root/undefined/ReplicaCodeRole",
            "uniqueId": "undefined_ReplicaCodeRole_05811766",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Effect\\":\\"Allow\\",\\"Sid\\":\\"AllowS3Replication\\"}]}",
        "name": "some-prefix\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
      },
      "undefined_cloudBucket_ReplicaDefaultRole_D4A7BB23": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/ReplicaDefaultRole",
            "uniqueId": "undefined_cloudBucket_ReplicaDefaultRole_D4A7BB23",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"s3.amazonaws.com\\"},\\"Effect\\":\\"Allow\\",\\"Sid\\":\\"AllowS3Replication\\"}]}",
        "name": "some-prefix\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
      },
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRole",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicy",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":[\\"\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}\\",\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicyAttachment",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "undefined_cloudQueue_EventSourceMapping_6330B504": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/EventSourceMapping",
            "uniqueId": "undefined_cloudQueue_EventSourceMapping_6330B504",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}",
        "function_name": "\${aws_lambda_function.undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B.function_name}",
      },
    },
    "aws_lambda_function": {
      "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/Default",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_7c20b234": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
            "WING_FUNCTION_NAME": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "s3_key": "\${aws_s3_object.undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38.key}",
        "timeout": 30,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "undefined_Code_6226BB4A": {
        "//": {
          "metadata": {
            "path": "root/undefined/Code",
            "uniqueId": "undefined_Code_6226BB4A",
          },
        },
        "bucket_prefix": "code-c818e3de-",
      },
      "undefined_ReplicaCode_A1324FE6": {
        "//": {
          "metadata": {
            "path": "root/undefined/ReplicaCode",
            "uniqueId": "undefined_ReplicaCode_A1324FE6",
          },
        },
        "bucket": "some-prefix\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
      },
      "undefined_cloudBucket_7A0DE585": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Default",
            "uniqueId": "undefined_cloudBucket_7A0DE585",
          },
        },
        "bucket_prefix": "cloud-bucket-c8802ab1-",
        "force_destroy": false,
      },
      "undefined_cloudBucket_ReplicaDefault_1A40E768": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/ReplicaDefault",
            "uniqueId": "undefined_cloudBucket_ReplicaDefault_1A40E768",
          },
        },
        "bucket": "some-prefix\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
      },
    },
    "aws_s3_bucket_public_access_block": {
      "undefined_cloudBucket_PublicAccessBlock_A3FBADF2": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "undefined_cloudBucket_PublicAccessBlock_A3FBADF2",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_replication_configuration": {
      "undefined_ReplicaCodeConfig_7AF473A0": {
        "//": {
          "metadata": {
            "path": "root/undefined/ReplicaCodeConfig",
            "uniqueId": "undefined_ReplicaCodeConfig_7AF473A0",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.id}",
        "depends_on": [
          "aws_s3_bucket_versioning.undefined_ReplicaCodeVersioning_0C8D5B72",
          "aws_s3_bucket_versioning.undefined_SourceCodeVersioning_7D904D19",
        ],
        "role": "\${aws_iam_role.undefined_ReplicaCodeRole_05811766.arn}",
        "rule": [
          {
            "destination": {
              "bucket": "\${aws_s3_bucket.undefined_ReplicaCode_A1324FE6.arn}",
              "storage_class": "STANDARD",
            },
            "id": "some-prefix\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
            "status": "Enabled",
          },
        ],
      },
      "undefined_cloudBucket_ReplicaDefaultConfig_CBF531C5": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/ReplicaDefaultConfig",
            "uniqueId": "undefined_cloudBucket_ReplicaDefaultConfig_CBF531C5",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.id}",
        "depends_on": [
          "aws_s3_bucket_versioning.undefined_cloudBucket_ReplicaDefaultVersioning_F1D03DCA",
          "aws_s3_bucket_versioning.undefined_cloudBucket_SourceDefaultVersioning_A6FC2A60",
        ],
        "role": "\${aws_iam_role.undefined_cloudBucket_ReplicaDefaultRole_D4A7BB23.arn}",
        "rule": [
          {
            "destination": {
              "bucket": "\${aws_s3_bucket.undefined_cloudBucket_ReplicaDefault_1A40E768.arn}",
              "storage_class": "STANDARD",
            },
            "id": "some-prefix\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
            "status": "Enabled",
          },
        ],
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "undefined_cloudBucket_Encryption_80E33E4D": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Encryption",
            "uniqueId": "undefined_cloudBucket_Encryption_80E33E4D",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_bucket_versioning": {
      "undefined_ReplicaCodeVersioning_0C8D5B72": {
        "//": {
          "metadata": {
            "path": "root/undefined/ReplicaCodeVersioning",
            "uniqueId": "undefined_ReplicaCodeVersioning_0C8D5B72",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_ReplicaCode_A1324FE6.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
      "undefined_SourceCodeVersioning_7D904D19": {
        "//": {
          "metadata": {
            "path": "root/undefined/SourceCodeVersioning",
            "uniqueId": "undefined_SourceCodeVersioning_7D904D19",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
      "undefined_cloudBucket_ReplicaDefaultVersioning_F1D03DCA": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/ReplicaDefaultVersioning",
            "uniqueId": "undefined_cloudBucket_ReplicaDefaultVersioning_F1D03DCA",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_ReplicaDefault_1A40E768.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
      "undefined_cloudBucket_SourceDefaultVersioning_A6FC2A60": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/SourceDefaultVersioning",
            "uniqueId": "undefined_cloudBucket_SourceDefaultVersioning_A6FC2A60",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.id}",
        "versioning_configuration": {
          "status": "Enabled",
        },
      },
    },
    "aws_s3_object": {
      "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/S3Object",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "undefined_cloudQueue_98A56968": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/Default",
            "uniqueId": "undefined_cloudQueue_98A56968",
          },
        },
        "name": "cloud-Queue-c873ff25",
      },
    },
  },
}
`;

exports[`Plugin examples > AWS target plugins > tf-backend.js > azurerm backend 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.17.0",
    },
    "outputs": {
      "root": {
        "undefined": {
          "cloud.TestRunner": {
            "TestFunctionArns": "WING_TEST_RUNNER_FUNCTION_ARNS",
          },
        },
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_ARNS": {
      "value": "[]",
    },
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRole",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicy",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":[\\"\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}\\",\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicyAttachment",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "undefined_cloudQueue_EventSourceMapping_6330B504": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/EventSourceMapping",
            "uniqueId": "undefined_cloudQueue_EventSourceMapping_6330B504",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}",
        "function_name": "\${aws_lambda_function.undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B.function_name}",
      },
    },
    "aws_lambda_function": {
      "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/Default",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_7c20b234": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
            "WING_FUNCTION_NAME": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "s3_key": "\${aws_s3_object.undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38.key}",
        "timeout": 30,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "undefined_Code_6226BB4A": {
        "//": {
          "metadata": {
            "path": "root/undefined/Code",
            "uniqueId": "undefined_Code_6226BB4A",
          },
        },
        "bucket_prefix": "code-c818e3de-",
      },
      "undefined_cloudBucket_7A0DE585": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Default",
            "uniqueId": "undefined_cloudBucket_7A0DE585",
          },
        },
        "bucket_prefix": "cloud-bucket-c8802ab1-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_public_access_block": {
      "undefined_cloudBucket_PublicAccessBlock_A3FBADF2": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "undefined_cloudBucket_PublicAccessBlock_A3FBADF2",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "undefined_cloudBucket_Encryption_80E33E4D": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Encryption",
            "uniqueId": "undefined_cloudBucket_Encryption_80E33E4D",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/S3Object",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "undefined_cloudQueue_98A56968": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/Default",
            "uniqueId": "undefined_cloudQueue_98A56968",
          },
        },
        "name": "cloud-Queue-c873ff25",
      },
    },
  },
}
`;

exports[`Plugin examples > AWS target plugins > tf-backend.js > gcp backend 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.17.0",
    },
    "outputs": {
      "root": {
        "undefined": {
          "cloud.TestRunner": {
            "TestFunctionArns": "WING_TEST_RUNNER_FUNCTION_ARNS",
          },
        },
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_ARNS": {
      "value": "[]",
    },
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRole",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicy",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":[\\"\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}\\",\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicyAttachment",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "undefined_cloudQueue_EventSourceMapping_6330B504": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/EventSourceMapping",
            "uniqueId": "undefined_cloudQueue_EventSourceMapping_6330B504",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}",
        "function_name": "\${aws_lambda_function.undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B.function_name}",
      },
    },
    "aws_lambda_function": {
      "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/Default",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_7c20b234": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
            "WING_FUNCTION_NAME": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "s3_key": "\${aws_s3_object.undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38.key}",
        "timeout": 30,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "undefined_Code_6226BB4A": {
        "//": {
          "metadata": {
            "path": "root/undefined/Code",
            "uniqueId": "undefined_Code_6226BB4A",
          },
        },
        "bucket_prefix": "code-c818e3de-",
      },
      "undefined_cloudBucket_7A0DE585": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Default",
            "uniqueId": "undefined_cloudBucket_7A0DE585",
          },
        },
        "bucket_prefix": "cloud-bucket-c8802ab1-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_public_access_block": {
      "undefined_cloudBucket_PublicAccessBlock_A3FBADF2": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "undefined_cloudBucket_PublicAccessBlock_A3FBADF2",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "undefined_cloudBucket_Encryption_80E33E4D": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Encryption",
            "uniqueId": "undefined_cloudBucket_Encryption_80E33E4D",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/S3Object",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "undefined_cloudQueue_98A56968": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/Default",
            "uniqueId": "undefined_cloudQueue_98A56968",
          },
        },
        "name": "cloud-Queue-c873ff25",
      },
    },
  },
}
`;

exports[`Plugin examples > AWS target plugins > tf-backend.js > s3 backend 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.17.0",
    },
    "outputs": {
      "root": {
        "undefined": {
          "cloud.TestRunner": {
            "TestFunctionArns": "WING_TEST_RUNNER_FUNCTION_ARNS",
          },
        },
      },
    },
  },
  "output": {
    "WING_TEST_RUNNER_FUNCTION_ARNS": {
      "value": "[]",
    },
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_iam_role": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRole",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicy",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicy_F90973A3",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":[\\"sqs:ReceiveMessage\\",\\"sqs:ChangeMessageVisibility\\",\\"sqs:GetQueueUrl\\",\\"sqs:DeleteMessage\\",\\"sqs:GetQueueAttributes\\"],\\"Resource\\":[\\"\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}\\"],\\"Effect\\":\\"Allow\\"},{\\"Action\\":[\\"s3:PutObject*\\",\\"s3:Abort*\\"],\\"Resource\\":[\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}\\",\\"\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.arn}/*\\"],\\"Effect\\":\\"Allow\\"}]}",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/IamRolePolicyAttachment",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_IamRolePolicyAttachment_ED335108",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.name}",
      },
    },
    "aws_lambda_event_source_mapping": {
      "undefined_cloudQueue_EventSourceMapping_6330B504": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/EventSourceMapping",
            "uniqueId": "undefined_cloudQueue_EventSourceMapping_6330B504",
          },
        },
        "batch_size": 1,
        "event_source_arn": "\${aws_sqs_queue.undefined_cloudQueue_98A56968.arn}",
        "function_name": "\${aws_lambda_function.undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B.function_name}",
      },
    },
    "aws_lambda_function": {
      "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/Default",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_6DA5FC0B",
          },
        },
        "environment": {
          "variables": {
            "BUCKET_NAME_7c20b234": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
            "WING_FUNCTION_NAME": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
            "WING_TARGET": "tf-aws",
          },
        },
        "function_name": "cloud-Queue-SetConsumer-83b2983f-c829c27f",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.undefined_cloudQueue-SetConsumer-83b2983f_IamRole_F2D4B35E.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "s3_key": "\${aws_s3_object.undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38.key}",
        "timeout": 30,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_s3_bucket": {
      "undefined_Code_6226BB4A": {
        "//": {
          "metadata": {
            "path": "root/undefined/Code",
            "uniqueId": "undefined_Code_6226BB4A",
          },
        },
        "bucket_prefix": "code-c818e3de-",
      },
      "undefined_cloudBucket_7A0DE585": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Default",
            "uniqueId": "undefined_cloudBucket_7A0DE585",
          },
        },
        "bucket_prefix": "cloud-bucket-c8802ab1-",
        "force_destroy": false,
      },
    },
    "aws_s3_bucket_public_access_block": {
      "undefined_cloudBucket_PublicAccessBlock_A3FBADF2": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/PublicAccessBlock",
            "uniqueId": "undefined_cloudBucket_PublicAccessBlock_A3FBADF2",
          },
        },
        "block_public_acls": true,
        "block_public_policy": true,
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "ignore_public_acls": true,
        "restrict_public_buckets": true,
      },
    },
    "aws_s3_bucket_server_side_encryption_configuration": {
      "undefined_cloudBucket_Encryption_80E33E4D": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Bucket/Encryption",
            "uniqueId": "undefined_cloudBucket_Encryption_80E33E4D",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_cloudBucket_7A0DE585.bucket}",
        "rule": [
          {
            "apply_server_side_encryption_by_default": {
              "sse_algorithm": "AES256",
            },
          },
        ],
      },
    },
    "aws_s3_object": {
      "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue-SetConsumer-83b2983f/S3Object",
            "uniqueId": "undefined_cloudQueue-SetConsumer-83b2983f_S3Object_231F4D38",
          },
        },
        "bucket": "\${aws_s3_bucket.undefined_Code_6226BB4A.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
    "aws_sqs_queue": {
      "undefined_cloudQueue_98A56968": {
        "//": {
          "metadata": {
            "path": "root/undefined/Default/cloud.Queue/Default",
            "uniqueId": "undefined_cloudQueue_98A56968",
          },
        },
        "name": "cloud-Queue-c873ff25",
      },
    },
  },
}
`;
